--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^17.0.22",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "miragejs": "^0.1.41",
     "typescript": "^4.4.3"
   }
 }
